# r2ai

./: .gitignore  README.md  pyproject.toml  test.py  test2.py  test_refactored.py
agent/: graph.py  llm.py  main.py
agent/nodes/: analyze_node.py  ingest_node.py  post_refactor_analyze_node.py  pr_node.py  refactor_node.py  review_node.py
agent/tools/: visualize_graph.py
bad_code/: bad_script4.py  bad_script4_refactored.py
bad_code/other/: bad_script1.py  bad_script2.py  bad_script3.py
