[tool.poetry]
name = "r2ai"
version = "0.1.0"
description = ""
authors = ["Jacob MacInnis"]
readme = "README.md"
packages = [{include = "agent"},]


[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.scripts]
r2ai = "agent.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
