[project]
name = "r2ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jacob MacInnis"}]

dependencies = []

[project.scripts]
r2ai = "agent.main:main"

[tool.poetry]
packages = [{ include = "agent" }]  # still needed here for packaging

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

